src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_SDR_Comped__c</fullName>
        <label>Activity SDR Comped</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacts_ID2__c</fullName>
        <externalId>true</externalId>
        <label>Contacts ID2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacts_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contacts ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100, &quot;Key Event/Task Details Captured&quot;,&quot;Missing: &quot;&amp;IF( LEN( Subject ) &lt; 3,&quot;Quality Subject Description, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhoId)=0,&quot;Contact/Lead Reference, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhatId)=0,&quot;Account/Opportunity Reference&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(  Subject  ) &lt; 3, 0,30) + IF( LEN(  WhoId ) = 0, 0,40) + IF( LEN(  WhatId ) = 0, 0,30)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dialpad__CallId__c</fullName>
        <label>CallId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dialpad__PhoneNumber__c</fullName>
        <label>PhoneNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dialpad__TimeInitiated__c</fullName>
        <label>Time Initiated</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dialpad__Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Uploaded_As_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Uploaded As Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LID__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Leads_ID__c</fullName>
        <externalId>true</externalId>
        <label>Leads ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Number__c</fullName>
        <label>Meeting Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Learning</fullName>
                </value>
                <value>
                    <fullName>Follow Up</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes_ID__c</fullName>
        <label>Notes ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <label>Owner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Type__c</fullName>
        <label>Parent Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Line_Item_ID__c</fullName>
        <externalId>true</externalId>
        <label>Revenue Line Item ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRepsManager__c</fullName>
        <description>Helpful for reporting and dashboarding. JIRA: SFDCSPT-332</description>
        <formula>Sales_Rep__r.Manager.FirstName &amp; &quot; &quot; &amp;  Sales_Rep__r.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-populated with the full name of the manager of the user displayed in the &apos;Sales Rep&apos; field on the record.</inlineHelpText>
        <label>Sales Rep&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <label>Sales Rep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>Held</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sugar_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Sugar ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>bizible2__BizibleId__c</fullName>
        <label>BizibleId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Bizible_Touchpoint_Date__c</fullName>
        <description>Custom date used to set the Touchpoint Date for Bizible Attribution. If blank, Created Date will be used.</description>
        <inlineHelpText>Custom date used to set the Touchpoint Date for Bizible Attribution. If blank, Created Date will be used.</inlineHelpText>
        <label>Bizible Touchpoint Date</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>